# sport-cli

./: .env  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: db.rs  main.rs  scrapper.rs
app/src/cli/: args.rs  utils.rs
app/src/cli/analytics/: args.rs  run.rs
app/src/cli/competitions/: args.rs
app/src/cli/players/: args.rs
app/src/cli/seasons/: args.rs
app/src/cli/teams/: args.rs
engine/: Cargo.toml
engine/src/: engine.rs  lib.rs  repo.rs
engine/src/repo/: competitions.rs  in_memo.rs  model.rs  player_stats.rs  players.rs  teams.rs
engine/tests/: engine.rs  fixture.rs
sport-radar/: Cargo.toml
sport-radar/resources/api/: competition_seasons.json  competitions.json  season_competitors.json  seasonal_competitor_statistics.json
sport-radar/src/: client.rs  config.rs  lib.rs  model.rs  utils.rs
sport-radar/tests/: client.rs  model.rs
sync/: Cargo.toml
sync/src/: consumer.rs  producer.rs
sync/tests/: consumer.rs  producer.rs
