[package]
name = "sport-radar"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.39.2"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.122"
dotenv = "0.15"
anyhow = "1.0.86"
tokio-retry = "0.3.0"

[dev-dependencies]
tokio-macros = "2.4.0"
